Small fix for the stat value overlapping the stat label

--- a/css/less/style.less
+++ b/css/less/style.less
@@ -76,6 +76,7 @@ h1 {
             overflow: hidden;
             padding: 4px;
             margin: 0;
+            font-size: 15px;
             dt {
                 float: left;
                 width: ~"calc(50% - 4px)";
